--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
